# TreeVQA

./: .gitignore  LICENSE  README.md  batch_ne.py  main.py  pyproject.toml  single_vqe.py  slurm_config.json.example
TreeVQA/: TreeVQA.py  __init__.py  noise_config.py  op_task.py  treevqa_helper.py
TreeVQA/application/: Ising_model.py  __init__.py  ising_application.py  maxcut_application.py  molecule_application.py  power_application.py  slice_utils.py  treevqa_application.py  util.py
TreeVQA/application/qaoa_TreeVQA/: README.md  circuit_utils.py  complete_graph_analysis.py  example.ipynb  example.py  graphs_utils.py  ground_power_state.py  ieee14.py  (+1 more)
TreeVQA/optimizer/: COBYLAP.py  SPSAP.py  TreeVQA_Yielder.py  __init__.py
TreeVQA/vqa/: __init__.py  pp_util.py  vqe_cluster.py  vqe_result.py
config/: H2-uccsd.json  simple-h2-test.json
config/cobyla/: molecule.json  physical.json
config/noisy/: LiH-single-cobyla.json  LiH-single-mumbai.json  auckland.json  cairo-ising.json  cairo.json  cobyla.json  ideal-5-single.json  ideal-5.json  kolkata.json  mumbai.json
config/spsa/: molecule.json  physical.json
ground-state/: BeH2.json  C2H2.json  H2.json  H2O.json  HF.json  LL-25.json  LL-5.json  LL-6.json  LL-8.json  LiH.json  SL-2.json  SL-3*3.json  SL-3.json  XXZ-5.json  XXZ-6.json  XXZ-8.json  XXZ-9.json  XXZ-re-5.json  complete_graph_analysis.json  ground_plot.py  plot_gram.py  power-grid.json  xxz-5.json
plot_util/: cobyla_analysis.py  efficiency_compare.py  spsa_analysis.py
scripts/: 0_setup.sh  1_ground_truth.sh  2_minimal_example.sh  3_analysis_plot.sh
(+4 files in other folders)
