[project]
name = "TreeVQA"
version = "0.1.0"
description = "TreeVQA - A Tree-Structured Execution Framework for Shot Reduction in Variational Quantum Algorithms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "pandapower>=3.1.2",
    "pygad>=3.4.0",
    "pyscf>=2.9.0",
    "qiskit==1.2.0",
    "qiskit-aer==0.15.1",
    "qiskit-algorithms>=0.3.1",
    "qiskit-ibm-runtime>=0.35.0",
    "qiskit-nature==0.7.2",
    "rustworkx>=0.16.0",
    "scienceplots>=2.1.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "stim>=1.15.0",
    "juliacall>=0.9.26",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pylatexenc>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["TreeVQA"]
